# Heroverse

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md
backend/: .env.example  pyproject.toml  server.py
backend/src/: app.py
backend/src/database/: crud.py  db.py  models.py
backend/src/routes/: favorites.py  heroes.py
backend/src/schemas/: favorite.py  hero.py  movie.py
backend/src/services/: omdb_api.py  superhero_api.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/favorites/: Favorites.jsx
frontend/src/hero/: HeroCard.jsx  HeroDetails.jsx  HeroSearch.jsx
frontend/src/layout/: Layout.jsx
frontend/src/services/: favoriteService.js  heroService.js
frontend/src/utils/: api.js
