[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "clerk-backend-api>=2.1.0",
    "fastapi>=0.128.8",
    "openai>=2.46.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.39.0",
]
